--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "name": "tradermode-extension",
+  "version": "1.0.0",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "web-ext": "^6.1.0"
+    "browserify": "^17.0.0",
+    "node-fetch": "^2.6.1"
   }
 }
