--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "tradermode-extension",
   "version": "1.0.0",
   "description": "",
-  "scripts": {},
+  "type": "module",
+  "scripts": {
+    "build": "browserify src/index.js -o public/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
