--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "type": "module",
   "scripts": {
     "start": "clear; node src/watcher.js",
-    "build": "browserify src/index.js -o public/index.js"
+    "build": "uglifyjs -c -m public/index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "browserify": "^17.0.0",
     "chokidar": "^3.5.3",
     "jquery": "^3.6.0",
     "node-fetch": "^2.6.1",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "uglify-js": "^3.15.4"
   }
 }
